[SYN-86] ADD doctor signing handler (#32)
* refactor: move error to server package

* add: get doctor

* add: get doctor unit test

* add: Doctor FindOrCreate

* add: more expect

* add: FindDoctorByUsername to interface

* add: doctor signin handler

* add: mockgen doctor datastore

* add: signin unit tests

* wired up auth handler

* SYN-93 add: swagger to doctor signin
